[gd_scene load_steps=5 format=3 uid="uid://dy5ftldc5oi8v"]

[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="1_ndf7u"]
[ext_resource type="Script" path="res://scenes/chat/chat.gd" id="2_5o1cq"]
[ext_resource type="PackedScene" uid="uid://oll1lrft6e72" path="res://scenes/chat/user_input.tscn" id="4_ir7nr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c2vaq"]
shader = ExtResource("1_ndf7u")

[node name="Chat" type="Panel"]
material = SubResource("ShaderMaterial_c2vaq")
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.07
anchor_right = 0.8
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_5o1cq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Foreground" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MessageArea" type="ScrollContainer" parent="MarginContainer/Foreground"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="Messages" type="VBoxContainer" parent="MarginContainer/Foreground/MessageArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="UserInput" parent="MarginContainer/Foreground" instance=ExtResource("4_ir7nr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DeleteModeButtons" type="HBoxContainer" parent="MarginContainer/Foreground"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="DeleteSelectedMessages" type="Button" parent="MarginContainer/Foreground/DeleteModeButtons"]
layout_mode = 2
text = "Delete"

[node name="Control" type="Control" parent="MarginContainer/Foreground/DeleteModeButtons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="CancelDeletion" type="Button" parent="MarginContainer/Foreground/DeleteModeButtons"]
layout_mode = 2
text = "Cancel"

[node name="APINodes" type="Node" parent="."]

[node name="WarningDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 100)
min_size = Vector2i(500, 70)
ok_button_text = "Retry"
dialog_autowrap = true
cancel_button_text = "Pause"

[connection signal="deletion_mode_activated" from="MarginContainer/Foreground/UserInput" to="." method="_on_user_input_deletion_mode_activated"]
[connection signal="pause_button_pressed" from="MarginContainer/Foreground/UserInput" to="." method="_on_user_input_pause_button_pressed"]
[connection signal="regeneration_requested" from="MarginContainer/Foreground/UserInput" to="." method="_on_user_input_regeneration_requested"]
[connection signal="pressed" from="MarginContainer/Foreground/DeleteModeButtons/DeleteSelectedMessages" to="." method="_on_delete_selected_messages_pressed"]
[connection signal="pressed" from="MarginContainer/Foreground/DeleteModeButtons/CancelDeletion" to="." method="_on_cancel_deletion_pressed"]
[connection signal="confirmed" from="WarningDialog" to="." method="_on_warning_dialog_confirmed"]
